[package]
name = "pamsoft_grid"
version = "2.0.0"
edition = "2021"
authors = ["Tercen"]

[lib]
name = "pamsoft_grid"
path = "src/lib.rs"

[[bin]]
name = "pamsoft_grid_batch"
path = "src/bin/pamsoft_grid_batch.rs"

[dependencies]
image = { version = "0.25", features = ["tiff"] }
imageproc = "0.25"
ndarray = "0.16"
ndarray-stats = "0.6"
rustfft = "6.2"
num-complex = "0.4"
nalgebra = "0.33"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.0", features = ["derive"] }
csv = "1.3"

[dev-dependencies]
criterion = "0.5"
approx = "0.5"
